# sealdb

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.sh  build_parser.sh  config.json  config.toml  config.yaml  go.mod  go.sum
.github/workflows/: build.yml  coverage.yml  test.yml
base/acl/: acl.go
base/cache/: cache_test.go  ristretto.go
base/flag/: flag.go
base/flagutil/: flagutil.go
base/logutil/: console_logger.go  flush.go  flush_glog.go  level.go  logger.go  logutil.go  proto3.go  proto3_test.go
base/sqltypes/: bind_variables.go  bind_variables_test.go  cached_size.go  event_token.go  event_token_test.go  named_result.go  named_result_test.go  proto3.go  proto3_test.go  query_response.go  result.go  result_test.go  testing.go  type.go  type_test.go  value.go  value_test.go
base/stats/: counter.go  duration.go  export.go  histogram.go  timings.go
base/sync2/: consolidator.go
base/trace/: logger.go  opentracing.go  plugin_jaeger.go  trace.go  utils.go
common/: Cargo.toml
common/src/: config.rs  connection_manager.rs  constants.rs  error.rs  lib.rs  priority_queue.rs  thread_pool.rs  thread_pool_manager.rs  types.rs
config/: README.md  sealdb.conf  sealdb.json  sealdb.toml  sealdb.yaml
core/: Cargo.toml
docker/: .dockerignore  README.md
docker/dev/: Dockerfile  (+1 more)
docs/: README.md  api_reference.md  architecture.md  ci-cd-setup.md  command_line_usage.md  configuration.md  connection-management.md  development_guide.md  executor-capabilities.md  executor-overview.md  index.md  quick_start.md  quickstart.md  rbo-optimization.md  sealdb-executor.md  sql-engine.md  sql_optimizer.md  sql_parser.md  thread_pool_design.md
examples/: CMakeLists.txt  README_antlr4_test.md  antlr4_parser_test.cpp  flex_bison_test.cpp  optimizer_test.cpp  sql_parser_test.cpp  thread_pool_test.cpp
kv/src/: lib.rs  (+3 more)
monitoring/: prometheus.yml
seal/: main.go
server/: Cargo.toml  main.go
sql/: Cargo.toml
sqlparser/: README.md  ast_format.go  ast_format_fast.go  ast_funcs.go  ast_rewriting.go  ast_rewriting_test.go  cached_size.go  comments.go  comments_test.go  encodable.go  encodable_test.go  normalizer.go  normalizer_test.go  parse_date.go  parse_table.go  parse_test.go  parsed_query.go  parsed_query_test.go  parser.go  redact_query.go  token.go  truncate_query.go  utils.go
src/: CMakeLists.txt  main.cpp  sealdb.cpp
src/common/: CMakeLists.txt  buffer.cpp  buffer.h  config.cpp  config.h  connection.cpp  error.cpp  error.h  logger.cpp  logger.h  thread_pool.cpp  utils.cpp  utils.h
src/common/src/: config.rs  connection_manager.rs  constants.rs  error.rs  lib.rs  priority_queue.rs  thread_pool.rs  thread_pool_manager.rs  types.rs
src/kv/: Cargo.toml  tikv_client.h
src/kv/src/: client.rs  kv_api.rs  lib.rs  transaction.rs
src/planner/: CMakeLists.txt  Cargo.toml  optimizer.cpp  planner.cpp
src/server/: CMakeLists.txt  grpc_protocol.h  mysql_protocol.h  postgresql_protocol.h  protocol.h  protocol_manager.h
src/sql/: CMakeLists.txt  Cargo.toml  README.md  ast.cpp  ast.h  lexer.cpp  lexer.l  parser.cpp  parser.y
src/sql/examples/: optimizer_debug.rs  parser_debug.rs  sql_processing_demo.rs  storage_integration.rs  storage_integration_test.rs
src/sql/executor/: CMakeLists.txt  physical_operator.h
src/sql/optimizer/: CMakeLists.txt  statistics_manager.cpp  statistics_manager.h
src/sql/parser/: CMakeLists.txt  parser_factory.cpp  parser_factory.h  parser_interface.h
src/sql/parser/antlr4/: CMakeLists.txt  SQL.g4  antlr4_lexer.cpp  antlr4_lexer.h  antlr4_parser.cpp  antlr4_parser.h
src/sql/parser/pg/: CMakeLists.txt
src/sql/parser/seal/: CMakeLists.txt  ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  seal_parser.cpp  seal_parser.h
src/sql/planner/: CMakeLists.txt
src/sql/src/: lib.rs
src/sql/src/config/: distributed_config.rs  executor_config.rs  mod.rs  optimizer_config.rs  storage_config.rs
src/sql/src/distributed/: distributed.rs  mod.rs
src/sql/src/executor/: execution_models.rs  executor.rs  mod.rs  operators.rs  parallel_executor.rs  storage_executor.rs
src/sql/src/executor/operators/: README.md  aggregate_operators.rs  batch_operators.rs  distributed_operators.rs  join_operators.rs  mod.rs  operator_trait.rs  parallel_operators.rs  scan_operators.rs  set_operators.rs  sort_operators.rs
src/sql/src/optimizer/: cbo.rs  cost_model.rs  mod.rs  optimizer.rs  rbo.rs  statistics.rs
src/sql/src/parser/: mod.rs  parser.rs
src/sql/src/planner/: mod.rs  rbo.rs
src/sql/src/storage/: buffer_pool.rs  cache_manager.rs  handler.rs  memory.rs  mod.rs  worker_pool.rs
src/storage/: CMakeLists.txt  Cargo.toml
src/storage/api/: CMakeLists.txt
src/storage/engines/: CMakeLists.txt
src/storage/engines/columnar/: CMakeLists.txt
src/storage/engines/distributed/: CMakeLists.txt
src/storage/engines/heap/: CMakeLists.txt
src/storage/engines/kv/: CMakeLists.txt
src/storage/examples/: simple_example.rs  storage_integration.rs
src/storage/metadata/: CMakeLists.txt
src/storage/src/: lib.rs
src/storage/src/client/: connection_pool.rs  load_balancer.rs  mod.rs  retry.rs
src/storage/src/common/: mod.rs
src/storage/src/engine/: factory.rs  memory.rs  mod.rs  tikv.rs
tests/: CMakeLists.txt  README.md  sql_parser_test.cpp
tests/integration/: CMakeLists.txt  Cargo.toml  README.md  generate_report.sh  run_tests.sh
tests/integration/src/: advanced_integration_test.rs  basic_integration_test.rs  cli_integration_test.rs  comprehensive_integration_test.rs  lib.rs
tests/regression/: Cargo.toml  Makefile  QUICK_START.md  README.md  USAGE.md  test_results.json
tests/regression/config/: test_config.yaml
tests/regression/core/: Cargo.toml
tests/regression/core/src/: config.rs  database_connection.rs  lib.rs  performance_monitor.rs  report_generator.rs  result_checker.rs  test_case.rs  test_framework.rs  test_runner.rs
tests/regression/reports/: test_report.html
tests/regression/src/: main.rs
tests/regression/suites/basic/: select_basic.sql
tools/: CMakeLists.txt
version/: banner.go  version.go
(+100 files in other folders)
