[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "SealDB 存储层 - 支持多种存储引擎的统一抽象层"

[dependencies]
# 核心依赖
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TiKV 客户端
tikv-client = "0.3"

# 异步支持
async-trait = "0.1"
futures = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# 并发控制
dashmap = "5.4"
parking_lot = "0.12"

# 序列化
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.6"