[package]
name = "sealdb-integration-tests"
version = "0.1.0"
edition = "2021"
description = "SealDB 集成测试套件"
license = "MIT"

[dependencies]
# 核心模块依赖
common = { path = "../../src/common" }
sql = { path = "../../src/sql" }
kv = { path = "../../src/kv" }
core = { path = "../../src/core" }
server = { path = "../../src/server" }

# 异步运行时
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }

# 测试相关
tokio-test = "0.4"
tempfile = "3.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并发控制
dashmap = "5.4"

[dev-dependencies]
# 额外的测试依赖
criterion = "0.5" 