[package]
name = "sealdb-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comprehensive_integration_test"
path = "src/comprehensive_integration_test.rs"

[dependencies]
sql = { path = "../../src/sql" }
storage = { path = "../../src/storage" }
common = { path = "../../src/common" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tempfile = "3.8"