[package]
name = "sealdb-regression"
version = "0.1.0"
edition = "2021"
authors = ["SealDB Team"]
description = "SealDB 回归测试框架 - 纯 Rust 实现"
license = "MIT"

[dependencies]
# 核心模块 - 使用 common 替代
common = { path = "../../src/common" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 系统监控
sysinfo = { version = "0.29", optional = true }

# 正则表达式
regex = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件系统
walkdir = "2.3"

# 并发控制
dashmap = "5.4"

[dev-dependencies]
# 测试
tokio-test = "0.4"
tempfile = "3.6"

[[bin]]
name = "test-framework"
path = "src/main.rs"

[features]
default = []
full = ["sysinfo"]